rework of anvil repairing and conflicting items/enchants checks, clean up some things